[tool.poetry]
name = "gumball"
version = "0.1.0"
description = "The amazing world of gumball"
authors = ["benilton02 <bsa.ele@uea.edu.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
gunicorn = "^20.1.0"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-flask = "^1.2.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
