[tool.poetry]
name = "gumball"
version = "0.1.0"
description = "The amazing world of gumball"
authors = ["benilton02 <bsa.ele@uea.edu.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.1.3"
gunicorn = "20.1.0"
Flask-Migrate = "3.1.0"
Flask-SQLAlchemy = "2.5.1"
alembic = "1.8.1"
click = "8.1.3"
flask-marshmallow = "0.14.0"
flask-serialize = "2.0.3"
greenlet = "1.1.2"
importlib-metadata = "4.12.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
Mako = "1.2.1"
MarkupSafe = "2.1.1"
marshmallow = "3.17.0"
marshmallow-sqlalchemy = "0.28.0"
packaging = "21.3"
permissive-dict = "1.0.4"
pyparsing = "3.0.9"
six = "1.16.0"
SQLAlchemy = "1.4.39"
Werkzeug = "2.1.2"
zipp = "3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-flask = "^1.2.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
